tests/fixtures/positive/libraries/LibraryEntitiesShouldNotBePublic.kt
package test

class InternalHelper {
    fun doWork() {
        println("should be internal")
    }
}
