tests/fixtures/negative/potential-bugs/ExplicitGarbageCollectionCall.kt
package fixtures.negative.potentialbugs

class ExplicitGarbageCollectionCall {
    fun cleanup() {
        println("no gc")
    }
}
